# devildex

./: .coverage  .gitignore  .hadolint.yaml  .mega-linter.yml  .ruff.toml  :memory:?cache=shared  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.old  Jenkinsfile  Jenkinsfile.old  LD_PATH.sh  LICENSE  README.md  coverage.xml  coverage_full_run.xml  devildex.ini  devildex_config.ini  generate_sphinx_doc.sh  git_push_all.sh  github_action_logs.txt  github_action_logs_deb_build_fail.txt  github_action_logs_pyinstaller_linux_fail.txt  github_action_logs_test_windows_pyinstaller_fail.txt  hadolint.yaml  install_pipx.sh  io.github.magowiz.devildex.json  main.py  megalinter_quickstart.sh  mypy.ini  pip.conf  poetry.toml  pylama.ini  pyoxidizer.bzl  pyproject.toml  pyproject.toml.mac  pyproject.toml.wx  pytest.ini  (+11 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml  build-and-test.yml  build-wheel.yml  build-whl-linux.yml  build-whl-macos.yml  build-whl-windows.yml  create-release-on-keyword.yml  megalinter.yml  package-desktop-app.yml  publish-docs.yml  python-tests.yml  release-please.yml  release.yml  test-packaged-app.yml
alembic/: env.py
alembic/versions/: 78c459e1a2ab_add_notes_column_to_docset.py
ci_dockerfiles/generate_doc/: Dockerfile
ci_dockerfiles/pytest_ubuntu_x11/: Dockerfile
ci_dockerfiles/pytest_x11/: Dockerfile
ci_dockerfiles/smoke_runner/: Dockerfile
ci_scripts/: smoke_test_agent.sh
local_data_parse/: common_read.py  venv_inventory.py
packaging/: setup_linux.py  setup_macos.py  setup_windows.py
packaging/debian/: changelog  control  copyright  install  postinst  rules
packaging/rpm/: convert_poetry_toml.py  devildex.spec
pyinstaller_hooks/: hook-alembic.py
pyinstaller_specs/: devildex.spec  devildex_linux.spec  devildex_macos.spec  devildex_windows.spec
runner/: Dockerfile
scripts/: __init__.py  compare_themes.py  dev_themes_server.py  devildex  devildex-alembic  devildex-gemini-setup  devildex-register-project  gen_both.sh  gen_devil.sh  gen_vanilla.sh  generate_pyproject_toml.py  import_recipes.py  mcp_client_test.py  run_alembic.py
source/: conf.py  devildex.docstrings.rst  devildex.imgs.rst  devildex.local_data_parse.rst  devildex.mkdocs.rst  devildex.orchestrator.rst  devildex.readthedocs.rst  devildex.rst  devildex.scanner.rst  devildex.scanner_utils.rst  devildex.theming.common_assets.rst  devildex.theming.devildex_mkdocs_theme.rst  devildex.theming.devildex_pdoc3_theme.rst  devildex.theming.devildex_pydoctor_theme.rst  devildex.theming.rst  devildex.theming.sphinx.devildex_sphinx_theme.rst  devildex.theming.sphinx.rst  devildex.theming.utils.rst  devildex.ui.rst  devildex.utils.rst  examples.rst  index.rst  modules.rst  scan_project_env.rst  setup_cxfreeze.rst  table_wx.rst
src/: table_wx.py
src/devildex/: __init__.py  alembic.ini  app_paths.py  config_manager.py  (+10 more)
test_report/: index.html
tests/: __init__.py  conftest.py  custom_exceptions.py  test_app_paths.py  test_build_context.py  test_core.py  test_database.py  test_docstrings.py  test_documentation_orchestrator.py  test_fetcher.py  test_fetcher2.py  test_fetcher_coverage.py  test_fetcher_main.py  test_fetcher_vcs_fallback.py  test_main_app_delete_helpers.py  test_main_app_docset_scan.py  test_main_app_log_panel.py  test_main_app_logic.py  test_main_app_regenerate.py  test_main_app_task_completion.py  test_mkdocs_src.py  test_orchestrator.py  test_readthedocs_api.py  test_scanner.py  test_task_manager.py  test_theming.py
workflow_logs_17900531558/: 0_release.txt
(+141 files in other folders)
