[project]
name = "devildex"
version = "0.1.0"
description = ""
authors = [
    {name = "magowiz",email = "magowiz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "pyside6 (>=6.9.0,<7.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "myst-parser (>=4.0.1,<5.0.0)",
    "sphinxcontrib-programoutput (>=0.18,<0.19)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)",
    "pdoc3 (>=0.11.6,<0.12.0)",
    "pip-requirements-parser (>=32.0.1,<33.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.packaging.dependencies]
cx-freeze = "^8.2.0"
nuitka = "^2.6.9"
pyoxidizer = "^0.24.0"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
pylama = {extras = ["all"], version = "^8.4.1"}
isort = "^6.0.1"
pydocstyle = "==6.1.*"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-rerunfailures = "^15.1"
pytest-html = "^4.1.1"


[tool.poetry.group.doc.dependencies]
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
sphinxcontrib-programoutput = "^0.18"
sphinx-copybutton = "^0.5.2"

