[project]
name = "devildex"
version = "0.1.0"
description = ""
authors = [
    {name = "magowiz",email = "magowiz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "pip-requirements-parser (>=32.0.1,<33.0.0)",
    "pdoc3 (>=0.11.6,<0.12.0)",
    "requests (>=2.32.3,<3.0.0)",
    "platformdirs (>=3.0.0,<5.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "wxpython (>=4.2.3,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.packaging.dependencies]
cx-freeze = "^8.2.0"
nuitka = "^2.6.9"
pyoxidizer = "^0.24.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-rerunfailures = "^15.1"
pytest-html = "^4.1.1"
pytest-xdist = "^3.6.1"
pytest-anyio = "^0.0.0"
typeguard = "^4.4.2"
requests = "^2.32.3"


[tool.poetry.group.doc.dependencies]
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
sphinxcontrib-programoutput = "^0.18"
sphinx-copybutton = "^0.5.2"


[tool.poetry.group.lint.dependencies]
ruff = "^0.11.12"
black = "^25.1.0"

[project.scripts]
devildex = "devildex.main:main"
devildex-register-project = "devildex.utils.companion:main"

